--- a/src/pages/SingleItems/Product/Product.css
+++ b/src/pages/SingleItems/Product/Product.css
@@ -1,4 +1,26 @@
 .single-item img{
-    width: 75%;
-    height: 60%;
+    width: 300px;
+    height: 300px;
+    margin-bottom: 5px;
+    border-radius: 15px;
+}
+.single-card{
+    width: 500px;
+    height: 700px;
+}
+.full-card{
+    border-radius: 25px;
+    
+}
+
+.single-item:hover{
+    border-radius: 25px;
+    background-color: rgba(222, 184, 135, 0.63);
+}
+
+@media only screen and (max-width:688px){
+    .single-item img{
+        width: 200px;
+        height: 200px;
+    }
 }
