--- a/src/pages/AllProducts/AllProduct/AllProduct.css
+++ b/src/pages/AllProducts/AllProduct/AllProduct.css
@@ -1,8 +1,12 @@
 .single-item img{
-    width: 250px;
-    height: 300px;
+    width: 200px;
+    height: 150px;
     margin-bottom: 5px;
     border-radius: 15px;
+}
+.single-card{
+   
+    line-height: 18px;
 }
 
 
@@ -10,3 +14,5 @@
     border-radius: 25px;
     background-color: rgba(222, 184, 135, 0.63);
 }
+
+
