--- a/src/pages/DashBoard/DashBoard/DashBoard.css
+++ b/src/pages/DashBoard/DashBoard/DashBoard.css
@@ -2,5 +2,5 @@
     background-color: rgba(255, 99, 71, 0.767);
     border: 1px solid gray;
     /* border-radius: 25px; */
-    height: 100vh;
+    /* height: 100vh; */
 }
