--- a/src/pages/AllProducts/AllProduct/AllProduct.css
+++ b/src/pages/AllProducts/AllProduct/AllProduct.css
@@ -5,13 +5,13 @@
     border-radius: 15px;
 }
 .single-card{
-   
     line-height: 18px;
 }
 
 
 .single-item:hover{
     border-radius: 25px;
+    box-shadow: 10px 10px 20px black;
     background-color: rgba(222, 184, 135, 0.63);
 }
 
