--- a/src/pages/DashBoard/AddReview/AddReview.css
+++ b/src/pages/DashBoard/AddReview/AddReview.css
@@ -1,10 +1,6 @@
 .form-style input ,textarea{
     display: flex;
     margin: 10px;
-    padding: 10px 25px;
-    text-align: center;
-    
-}
-.form-style{
-    text-align: center;
+    /* text-align: center; */
+    border-radius: 10px;
 }
