--- a/src/pages/DashBoard/DashBoard/DashBoard.css
+++ b/src/pages/DashBoard/DashBoard/DashBoard.css
@@ -1,5 +1,6 @@
 .dashboard{
-    background-color: rgba(255, 99, 71, 0.767);
+    background-color: #fff8f8;
+    color: rgb(37, 32, 23);
     border: 1px solid gray;
     /* border-radius: 25px; */
     /* height: 100vh; */
