--- a/src/pages/DashBoard/AddReview/AddReview.css
+++ b/src/pages/DashBoard/AddReview/AddReview.css
@@ -3,4 +3,7 @@
     margin: 10px;
     /* text-align: center; */
     border-radius: 10px;
+    background-scroll: ;
+    border-style: ;
+    border-width: ;
 }
