--- a/src/pages/Home/Menubar/Menubar.css
+++ b/src/pages/Home/Menubar/Menubar.css
@@ -1,4 +1,4 @@
-.nav-img img{
-    width: 150px;
-    height: 70px;
+.nav-title{
+    font-weight: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
